some search tweaks

--- a/en/search/index.html
+++ b/en/search/index.html
@@ -85,10 +85,10 @@ h1 {
 <div class="footer_right">
 <ul>
 
-<li><a href="../../.../help/">Help</a></li>
-<li><a href="../../.../terms/">Terms of Use</a></li>
+<li><a href="../../en/help/">Help</a></li>
+<li><a href="../../en/terms/">Terms of Use</a></li>
 
-<li class="lastnav"><a href="../../.../contact-us/">Contact Us</a></li>
+<li class="lastnav"><a href="../../en/contact-us/">Contact Us</a></li>
 </ul>
 </div>
 <!--/footer_right-->
