--- a/fr/recherche/index.html
+++ b/fr/recherche/index.html
@@ -74,7 +74,7 @@ h1 {
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="search_content_wrap">
-<h1 data-pagefind-meta="title">Search</h1>
+<h1 data-pagefind-meta="title">Recherche</h1>
 <div id="search"></div>
 
 </div>
