to cherry pick on top of a backup

--- a/en/programs/environmental-promoters/index.html
+++ b/en/programs/environmental-promoters/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -138,7 +138,7 @@ National Round Table on the Environment &amp; the Economy</p>
 <p><img alt="Tools of Change Workbook" complete="complete" height="129" src="/images/workbook.gif" style="float: left; margin-right: 20px" width="100"/>The Education Committee of the National Round Table on the Environment and the Economy was mandated to increase public awareness and understanding about the principles and practices of sustainability. It therefore provided support for the publishing and distribution of a workbook version of this Web site, called Tools of Change: Proven Methods for Promoting Environmental Citizenship.</p>
 <p>You can find out more about this workbook or download it at <a href="http://www.cullbridge.com/Projects/Tools_of_Change.htm" target="_blank">www.cullbridge.com/Projects/Tools_of_Change.htm.</a></p>
 <h2><a name="6">The Tools in Practice: Case Studies</a></h2>
-<p>The Case Studies section of this site brings the <a href="../../../en/planning-guide/">Planning Guide</a> and <a href="../../../en/tools-of-change/">Tools of Change</a> to life. To search for case studies that illustrate particular points of interest, click on the "<a href="../../../en/case-studies/case-studies-search/">search</a>" button at the top right of the screen.</p>
+<p>The Case Studies section of this site brings the <a href="../../../en/planning-guide/">Planning Guide</a> and <a href="../../../en/tools-of-change/">Tools of Change</a> to life. To search for case studies that illustrate particular points of interest, click on the "<a href="../../../en/search/">search</a>" button at the top right of the screen.</p>
 <h2><a name="7">Site Guide</a></h2>
 <p>Use the navigation bar at the top of the screen to explore the various sections of this site. The following are some highlights for promoters of environmental citizenship, sustainable economic development, or green products and services.</p>
 <h4>The Planning Guide:</h4>
@@ -157,7 +157,7 @@ National Round Table on the Environment &amp; the Economy</p>
 <h4>The Case Studies section:</h4>
 <ul>
 <li>brings the first two sections to life, with success stories illustrating how the planning approach and the use of multiple tools led to success, and</li>
-<li>can be <a href="../../../en/case-studies/case-studies-search/">searched</a> by topic area, location, key words, and other factors.</li>
+<li>can be <a href="../../../en/search/">searched</a> by topic area, location, key words, and other factors.</li>
 </ul>
 </div>
 <p> </p>
