--- a/en/programs/health-promoters/index.html
+++ b/en/programs/health-promoters/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -151,7 +151,7 @@ Health Canada</p>
 <li>Building healthy public policy entails getting policies and procedures in place that make the healthy choice the easier choice. This requires identifying and addressing key obstacles that would otherwise discourage people from taking action, as discussed in the section <a href="../../../en/tools-of-change/overcoming-specific-barriers/">Overcoming Specific Barriers</a>.</li>
 <li>The promotion of supportive physical and social environments is central to this site's Planning Guide and Tools of Change sections. Dealing with key obstacles for both is discussed in the section <a href="../../../en/tools-of-change/overcoming-specific-barriers/">Overcoming Specific Barriers</a>. Other relevant Tools of Change include: <a href="../../../en/tools-of-change/building-motivation-over-time/">Building Motivation over Time</a>, <a href="../../../en/tools-of-change/norm-appeals/">Norm Appeals</a>, <a href="../../../en/tools-of-change/word-of-mouth/">Word of Mouth</a>, <a href="../../../en/tools-of-change/neighbourhood-coaches-and-block-leaders/">Neighborhood Coaches and Block Leaders</a>, <a href="../../../en/tools-of-change/peer-support-groups/">Peer Support Groups</a>, <a href="../../../en/tools-of-change/school-programs/">School Programs</a>, and <a href="../../../en/tools-of-change/work-programs/">Work Programs</a>.</li>
 <li>The strengthening of community action is a frequent result of programs that are planned, implemented and/or evaluated at the community level. This site places a strong emphasis on approaches that affirm the important value of individuals working collectively, "taking control over" things that determine their health. This process must remain true to health promotion values of respect, trust, meaningful participation, and the like. For more detail see the <a href="../../../en/programs/community-based-social-marketing/">Introduction to Community-Based Social Marketing</a>.</li>
-<li>The development of personal skills and coping practices involves the promotion of healthier behaviors or habits - which is what this site is all about. To search for case studies that illustrate particular points of interest, use the site's <a href="../../../en/case-studies/case-studies-search/">search</a> capabilities.</li>
+<li>The development of personal skills and coping practices involves the promotion of healthier behaviors or habits - which is what this site is all about. To search for case studies that illustrate particular points of interest, use the site's <a href="../../../en/search/">search</a> capabilities.</li>
 </ol>
 <h2><a name="1-4">This Web site and the Hamilton-Bhatti model </a></h2>
 <p>In February 1996, Nancy Hamilton and Tariq Bhatti published an integrated model of population health and health promotion. The center-point of this paper was a new model that captured the who, the what and the how of health promotion.</p>
@@ -167,12 +167,12 @@ Health Canada</p>
 <ul>
 <li>social support networks (in particular, see <a href="../../../en/tools-of-change/neighbourhood-coaches-and-block-leaders/">Neighborhood Coaches and Block Leaders</a>, <a href="../../../en/tools-of-change/norm-appeals/">Norm Appeals</a>, <a href="../../../en/tools-of-change/obtaining-a-commitment/">Obtaining a Commitment</a>, <a href="../../../en/tools-of-change/peer-support-groups/">Peer Support Groups</a>, <a href="../../../en/tools-of-change/school-programs/">School Programs that Involve the Family</a>, and <a href="../../../en/tools-of-change/work-programs/">Work Programs that Influence the Home</a>),</li>
 <li>physical environments (in particular, see <a href="../../../en/tools-of-change/overcoming-specific-barriers/">Overcoming Specific Barriers</a>, and the <a href="../../../en/programs/environmental-promoters/">Introduction for Promoters of Environmentally-Friendly Habits, Products or Services</a>,</li>
-<li>personal health practices and coping skills (see the topics you can <a href="../../../en/topic-resources/topic-resources-search/">search</a> by), and</li>
-<li>healthy child development (see the topics you can <a href="../../../en/topic-resources/topic-resources-search/">search</a> by).</li>
+<li>personal health practices and coping skills (see the topics you can <a href="../../../en/search/">search</a> by), and</li>
+<li>healthy child development (see the topics you can <a href="../../../en/search/">search</a> by).</li>
 </ul>
 <p>The right hand side of the cube outlines the how of health promotion, and incorporates the five action areas outlined in the Ottawa Charter (see <a href="#1-2">This Web site and the Ottawa Charter</a>).</p>
 <h2><a name="1-6">Health Promotion in Practice: Case Studies</a></h2>
-<p>The Case Studies section of this site brings the Planning Guide and Tools of Change to life. To search for case studies that illustrate particular points of interest, use the site's <a href="../../../en/topic-resources/topic-resources-search/">search</a> capabilities.</p>
+<p>The Case Studies section of this site brings the Planning Guide and Tools of Change to life. To search for case studies that illustrate particular points of interest, use the site's <a href="../../../en/search/">search</a> capabilities.</p>
 <h2><a name="1-7">Site Guide for Health Promoters</a></h2>
 <p>Use the navigation bar at the top of the screen to explore the various sections of this site. The following are some highlights for Health Promoters.</p>
 <h4>The Planning Guide:</h4>
@@ -191,7 +191,7 @@ Health Canada</p>
 <h4>The Case Studies section:</h4>
 <ul>
 <li>brings the first two sections to life, with success stories illustrating how the planning approach and the use of multiple tools led to success, and</li>
-<li>can be <a href="../../../en/case-studies/case-studies-search/">searched</a> by topic area, location, key words, and other factors.<i> </i></li>
+<li>can be <a href="../../../en/search/">searched</a> by topic area, location, key words, and other factors.<i> </i></li>
 </ul>
 </div>
 </div><!--/left_main-->
