--- a/en/programs/social-marketers/index.html
+++ b/en/programs/social-marketers/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -273,7 +273,7 @@ Health Canada</p>
 <li><a href="../../../en/planning-guide/measuring-achievements/">Measuring Achievements</a></li>
 </ul>
 <h2><a name="4">Social Marketing in Practice: Case Studies</a></h2>
-<p>The Case Studies section of this site brings the Planning Guide and Tools of Change to life. To search for case studies that illustrate particular points of interest, use the site's <a href="../../../en/case-studies/case-studies-search/">search</a> capabilities.</p>
+<p>The Case Studies section of this site brings the Planning Guide and Tools of Change to life. To search for case studies that illustrate particular points of interest, use the site's <a href="../../../en/search/">search</a> capabilities.</p>
 <h2><a name="5">Site Guide for Social Marketers</a></h2>
 <p>Use the navigation bar at the top of the screen to explore the various sections of this site. The following are some highlights for social marketers.</p>
 <h5>The Planning Guide:</h5>
@@ -292,7 +292,7 @@ Health Canada</p>
 <h5>The Case Studies section:</h5>
 <ul>
 <li>brings the first two sections to life, with success stories illustrating how the planning approach and the use of multiple tools led to success, and</li>
-<li>can be <a href="../../../en/case-studies/case-studies-search/">searched</a> by topic area, location, key words, and other factors.</li>
+<li>can be <a href="../../../en/search/">searched</a> by topic area, location, key words, and other factors.</li>
 </ul>
 </div>
 </div><!--/left_main-->
