--- a/en/tools-of-change/peer-support-groups/index.html
+++ b/en/tools-of-change/peer-support-groups/index.html
@@ -78,14 +78,14 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
 
 
 
-<li class="last_nav"><a class="" href="../../../fr/etudes-de-cas/recherche-de-etudes-de-cas/" title="left=56-rgt=57">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/outils-de-changement/groupes-de-soutien-par-les-pairs/" title="left=56-rgt=57">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
@@ -183,7 +183,8 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p> <a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a>'s EcoTeams met eight times, two weeks apart.</p> <p><a href="../../../en/case-studies/detail/678">HoMBReS</a> ran its soccer team meetings either before or after practice.</p><p><a href="../../../en/case-studies/detail/684"><em>Boston's Challenge for Sustainability</em></a> held monthly meetings and networking opportunities. </p></div>
+<p> <a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a>'s EcoTeams met eight times, two weeks apart.
+</p> <p><a href="../../../en/case-studies/detail/678">HoMBReS</a> ran its soccer team meetings either before or after practice.</p><p><a href="../../../en/case-studies/detail/684"><em>Boston's Challenge for Sustainability</em></a> held monthly meetings and networking opportunities. </p></div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
