--- a/en/tools-of-change/word-of-mouth/index.html
+++ b/en/tools-of-change/word-of-mouth/index.html
@@ -78,14 +78,14 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
 
 
 
-<li class="last_nav"><a class="" href="../../../fr/ressources-de-sujets/recherche-de-ressources-de-sujets/" title="left=60-rgt=61">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/outils-de-changement/de-bouche-a-oreille/" title="left=60-rgt=61">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
@@ -141,7 +141,10 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p> <a href="../../../en/case-studies/detail/15">JEEP</a> used pens, hats, T-shirts and key chains with logos on them.</p> <p> <a href="../../../en/case-studies/detail/20">ReCAP</a> left promotional pamphlets with participants to distribute to others.</p> <p> <a href="../../../en/case-studies/detail/114">Green$aver</a> encouraged promotion by word of mouth by leaving flyers with customers after completing assessments, and asking them to recommend the service if they were satisfied with it. Many new customers were referred by friends who were satisfied with Green$avers services.</p> <em>Bert the Salmon</em> produced a 10 minute video for use at community centre talks, and for free distribution to every customer who purchased a mulching lawn mower. </div>
+<p> <a href="../../../en/case-studies/detail/15">JEEP</a> used pens, hats, T-shirts and key chains with logos on them.
+</p> <p> <a href="../../../en/case-studies/detail/20">ReCAP</a> left promotional pamphlets with participants to distribute to others.
+</p> <p> <a href="../../../en/case-studies/detail/114">Green$aver</a> encouraged promotion by word of mouth by leaving flyers with customers after completing assessments, and asking them to recommend the service if they were satisfied with it. Many new customers were referred by friends who were satisfied with Green$avers services.
+</p> <em>Bert the Salmon</em> produced a 10 minute video for use at community centre talks, and for free distribution to every customer who purchased a mulching lawn mower. </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
@@ -173,7 +176,9 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>Recycling neighbours in the city of <a href="../../../en/case-studies/detail/4">Claremont</a> were recruited to invite their non-recycling neighbours to participate.</p><p>People receiving home visits from <a href="../../../en/case-studies/detail/20">ReCAP</a> were simply asked: "If you are happy with the service you received, please tell others about it." This request was made orally at the end of the visit and was repeated on the recommendation sheet left with the residents.</p><p>Participants first heard about <a href="../../../en/case-studies/detail/9">GAP</a> as "a program for developing sustainable lifestyles and helping others to do the same." At their first meeting, they were reminded of this goal, introduced to the recruiting process, and asked: "Are you up to attempting to create two more teams at the end of the program?" At the end of the program, each participant was asked to invite people to an introductory event.</p><p>	Participants in <a href="../../../en/case-studies/detail/98">Ottawas Commuter Challenge</a> were encouraged to "bike or bus with a buddy", thereby encouraging participants to ask others to join them.</p>
+<p>Recycling neighbours in the city of <a href="../../../en/case-studies/detail/4">Claremont</a> were recruited to invite their non-recycling neighbours to participate.</p><p>People receiving home visits from <a href="../../../en/case-studies/detail/20">ReCAP</a> were simply asked: "If you are happy with the service you received, please tell others about it." This request was made orally at the end of the visit and was repeated on the recommendation sheet left with the residents.</p><p>Participants first heard about <a href="../../../en/case-studies/detail/9">GAP</a> as "a program for developing sustainable lifestyles and helping others to do the same." At their first meeting, they were reminded of this goal, introduced to the recruiting process, and asked: "Are you up to attempting to create two more teams at the end of the program?" At the end of the program, each participant was asked to invite people to an introductory event.</p><p>
+	Participants in <a href="../../../en/case-studies/detail/98">Ottawas Commuter Challenge</a> were encouraged to "bike or bus with a buddy", thereby encouraging participants to ask others to join them.
+</p>
 <p class="tip_example"><strong>Tip:</strong> Research shows that this approach will not work if the person is not interested in spreading the word or feels pressured to do so.</p>
 <p class="tip_example"><strong>Tip:</strong> See the Tool <a href="../../../en/tools-of-change/obtaining-a-commitment">Obtaining a Commitment</a>.</p>
 </div>
