--- a/en/workshops/customized-webinar-based-presentations/index.html
+++ b/en/workshops/customized-webinar-based-presentations/index.html
@@ -78,14 +78,14 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
 
 
 
-<li class="last_nav"><a class="" href="../../../fr/aide/landmark-badge/" title="left=146-rgt=147">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/ateliers/présentations-personnalisé-par-webinaire/" title="left=146-rgt=147">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
