--- a/fr/outils-de-changement/surmonter-des-obstacles-specifiques/index.html
+++ b/fr/outils-de-changement/surmonter-des-obstacles-specifiques/index.html
@@ -173,7 +173,7 @@ Vous voulez aider les habitants à surmonter les obstacles qui les empêchent de
 <h1>Votre Programme</h1>
 <table cellpadding="3" cellspacing="3">
 	
-	
+
 
 
 
@@ -239,14 +239,13 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Que connaissez-vous la réceptivité de peuples à faire l'action désirée?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
 <p>S'il est nécessaire d'augmenter leur réceptivité, comment ferez-vous ceci?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Soutenir la motivation au fil du temps
-	<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Mesures financières incitatives et dissuasives
-	<p> Attrait des normes
-	<p> Vivid, Personalized Communication
+<p>Soutenir la motivation au fil du temps</p>
+<p>Mesures financières incitatives et dissuasives</p>
+<p> Attrait des normes</p>
+<p> Vivid, Personalized Communication</p><
 
-	</p></p></p></p></p></div><!--/plan_col_right-->
+</div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">8.  Informer, démontrer et offrir un appui personnel au besoin. </div><!--/yellow_headers-->
