--- a/fr/programmes/acheteurs-sociaux/index.html
+++ b/fr/programmes/acheteurs-sociaux/index.html
@@ -271,7 +271,7 @@ Santé Canada</p>
 <li>le <a href="http://www.social-marketing.org/">Social Marketing Institute</a>.</li>
 </ul>
 <h2><a name="4">Le marketing social en pratique : études de cas</a></h2>
-<p>La section Études de cas transpose dans un contexte les sections Guide de planification et Outils de changement. Pour trouver des études de cas qui portent sur vos champs d'intérêt, cliquez sur « <a href="../../../fr/guide-de-planification/recherche-avance/">Recherche</a> ».</p>
+<p>La section Études de cas transpose dans un contexte les sections Guide de planification et Outils de changement. Pour trouver des études de cas qui portent sur vos champs d'intérêt, cliquez sur « <a href="../../../fr/recherche/">Recherche</a> ».</p>
 <h2><a name="5">Guide du site pour les spécialistes du marketing social</a></h2>
 <p>Pour consulter les diverses sections de ce site, utilisez la barre de navigation en haut de l'écran. Voici quelques points importants pour les spécialistes du marketing social.</p>
 <h6>Le Guide de planification</h6>
@@ -290,7 +290,7 @@ Santé Canada</p>
 <h6>Études de cas:</h6>
 <ul>
 <li>transpose les deux premières sections dans un contexte, en illustrant l'importance de la planification et de divers outils pour la réussite des programmes ;</li>
-<li>peut faire l'objet d'une <a href="../../../fr/guide-de-planification/recherche-avance/">recherche</a> par sujet, endroit, mot clé et autres éléments.</li>
+<li>peut faire l'objet d'une <a href="../../../fr/recherche/">recherche</a> par sujet, endroit, mot clé et autres éléments.</li>
 </ul>
 </div>
 <p> </p>
