--- a/fr/programmes/instigateurs-de-sante/index.html
+++ b/fr/programmes/instigateurs-de-sante/index.html
@@ -147,7 +147,7 @@ Santé Canada</p>
 <li>La mise en oeuvre d'une politique publique sur la santé passe par l'adoption de politiques et de procédures qui font des choix sains les choix les plus faciles à faire. À cette fin, il faut cerner et éliminer les principaux obstacles qui découragent les gens d'agir. Voir la section <a href="../../../fr/outils-de-changement/surmonter-des-obstacles-specifiques/">Surmonter des obstacles spécifiques</a>.</li>
 <li>La promotion de milieux physiques et sociaux favorables est au coeur des sections Guide de planification et Outils de changement de ce site. Vous trouverez à la section <a href="../../../fr/outils-de-changement/surmonter-des-obstacles-specifiques/">Surmonter des obstacles spécifiques</a>des conseils pour éliminer les obstacles dans ce secteur. Il existe également d'autres outils de changement : <a href="../../../fr/outils-de-changement/soutenir-la-motivation-au-fil-du-temps/">soutenir la motivation au fil du temps</a>, <a href="../../../fr/outils-de-changement/attrait-des-normes/">attrait des normes</a>, <a href="../../../fr/outils-de-changement/de-bouche-a-oreille/">bouche à oreille</a>, <a href="../../../fr/outils-de-changement/animateurs-de-quartier---meneurs-populaires/">animateurs de quartier/leaders populaires</a>, <a href="../../../fr/outils-de-changement/groupes-de-soutien-par-les-pairs/">groupes de soutien par les pairs</a>, <a href="../../../fr/outils-de-changement/programmes-scolaires-qui-engagent-la-famille/">programmes scolaires</a>, et <a href="../../../fr/outils-de-changement/programmes-en-milieu-de-travail-qui-affectent-le-foyer/">programmes en milieu de travail</a>.</li>
 <li>Le renforcement de l'action communautaire découle souvent de programmes qui sont planifiés, mis en place et évalués à léchelle locale. Ce site met laccent sur des approches qui reconnaissent limportance de chacun dans leffort collectif et favorisent la responsabilisation individuelle en matière de santé. Ce processus doit refléter les valeurs inhérentes à la promotion de la santé : respect, confiance, participation significative et autres. Pour de plus amples renseignements, consultez la section <a href="../../../fr/programmes/le-marketing-social-communautaire/">Introduction au marketing social communautaire</a>.</li>
-<li>Lacquisition d'aptitudes personnelles et de méthodes de prise en charge passe par la promotion d'habitudes ou de comportements plus sains - la raison d'être de ce site. Pour trouver des études de cas qui illustrent vos champs d'intérêt précis, utilisez la fonction <a href="../../../fr/guide-de-planification/recherche-avance/"><strong>Recherche.</strong></a></li>
+<li>Lacquisition d'aptitudes personnelles et de méthodes de prise en charge passe par la promotion d'habitudes ou de comportements plus sains - la raison d'être de ce site. Pour trouver des études de cas qui illustrent vos champs d'intérêt précis, utilisez la fonction <a href="../../../fr/recherche/"><strong>Recherche.</strong></a></li>
 </ol>
 <h2><a name="1-3">Le modèle Hamilton-Bhatti</a></h2>
 <p>En février 1996, Nancy Hamilton et Tariq Bhatti ont publié un modèle intégré de santé publique et de promotion de la santé. Point central de leur document, ce nouveau modèle résume les questions à prendre en compte pour la promotion de la santé : « qui », « quoi » et « comment ».</p>
@@ -163,8 +163,8 @@ Santé Canada</p>
 <ul>
 <li>Réseaux de soutien social (voir surtout, <a href="../../../fr/outils-de-changement/animateurs-de-quartier---meneurs-populaires/">Animateurs de quartier/leaders populaires</a>, <a href="../../../fr/outils-de-changement/attrait-des-normes/">Attrait des normes</a>, <a href="../../../fr/outils-de-changement/obtenir-un-engagement/">Obtenir un engagement</a>, <a href="../../../fr/outils-de-changement/groupes-de-soutien-par-les-pairs/">Groupes de soutien par les pairs</a>, <a href="../../../fr/outils-de-changement/programmes-scolaires-qui-engagent-la-famille/">Programmes scolaires à volet familial</a>, et <a href="../../../fr/outils-de-changement/programmes-en-milieu-de-travail-qui-affectent-le-foyer/">Programmes en milieu de travail à volet domestique</a>),</li>
 <li>Environnements physiques (voir surtout <a href="../../../fr/outils-de-changement/surmonter-des-obstacles-specifiques/">Surmonter des obstacles spécifiques</a>, et <a href="../../../fr/programmes/instigateurs-environnementaux/">Introduction pour les promoteurs d'habitudes, de produits et de services écologiques</a>)</li>
-<li>Habitudes de vie et capacités d'adaptation (voir les sujets à laide de notre fonction <a href="../../../fr/guide-de-planification/recherche-avance/">Recherche</a> )</li>
-<li>Développement de lenfant (voir les sujets voir les sujets à laide de notre fonction <a href="../../../fr/guide-de-planification/recherche-avance/">Recherche</a> ).</li>
+<li>Habitudes de vie et capacités d'adaptation (voir les sujets à laide de notre fonction <a href="../../../fr/recherche/">Recherche</a> )</li>
+<li>Développement de lenfant (voir les sujets voir les sujets à laide de notre fonction <a href="../../../fr/recherche/">Recherche</a> ).</li>
 </ul>
 <p>Le côté droit du cube répond à la question « comment » : comment promouvoir la santé. Il propose comme réponses les cinq secteurs d'intervention énoncés dans la Charte d'Ottawa (voir <a href="#1-2">Le site et la Charte d'Ottawa</a>).</p>
 <h2><a name="2">Autres renseignements sur la promotion de la santé</a></h2>
@@ -174,7 +174,7 @@ Santé Canada</p>
 <li>Le site Web du Centre ontarien d'information en prévention. Pour ajouter votre nom à la liste de distribution de leur bulletin d'information en promotion de la santé qui est publié chaque semaine, allez à l'adresse suivante : <a href="http://www.nexussante.ca/index_fr.php">http://www.nexussante.ca/index_fr.php</a></li>
 </ul>
 <h2><a name="3">La promotion de la santé en pratique : études de cas</a></h2>
-<p>La section Études de cas transpose dans un contexte les sections Guide de planification et Outils de changement. Pour trouver des études de cas qui portent sur vos champs dintérêt, cliquez sur « <a href="../../../fr/guide-de-planification/recherche-avance/">Recherche</a>».</p>
+<p>La section Études de cas transpose dans un contexte les sections Guide de planification et Outils de changement. Pour trouver des études de cas qui portent sur vos champs dintérêt, cliquez sur « <a href="../../../fr/recherche/">Recherche</a>».</p>
 <h2><a name="4">Guide du site pour les promoteurs de la santé</a></h2>
 <p>Pour consulter les diverses sections de ce site, utilisez la barre de navigation en haut de lécran. Voici quelques points importants pour les promoteurs de la santé.</p>
 <h4>Le Guide de planification:</h4>
@@ -193,7 +193,7 @@ Santé Canada</p>
 <h4>La section Études de cas :</h4>
 <ul>
 <li>transpose les deux premières sections dans un contexte, en illustrant limportance de la planification et de divers outils pour la réussite des programmes ;</li>
-<li>peut faire l'objet d'une <a href="../../../fr/guide-de-planification/recherche-avance/">Recherche</a> par sujet, endroit, mot clé et autres éléments.</li>
+<li>peut faire l'objet d'une <a href="../../../fr/recherche/">Recherche</a> par sujet, endroit, mot clé et autres éléments.</li>
 </ul>
 </div>
 <p> </p>
