--- a/fr/programmes/instigateurs-environnementaux/index.html
+++ b/fr/programmes/instigateurs-environnementaux/index.html
@@ -162,7 +162,7 @@ Méthodes éprouvées de promotion de l'écocivisme »</a></h2>
 <h6>La section Étude de cas :</h6>
 <ul>
 <li>transpose les deux premières sections dans un contexte, en illustrant limportance de la planification et de divers outils pour la réussite des programmes ;</li>
-<li>peut faire l'objet d'une <a href="../../../fr/guide-de-planification/recherche-avance/">recherche</a> par sujet, endroit, mot clé et autres éléments.</li>
+<li>peut faire l'objet d'une <a href="../../../fr/recherche/">recherche</a> par sujet, endroit, mot clé et autres éléments.</li>
 </ul>
 </div>
 <p> </p>
