--- a/fr/programmes/professionnels-des-transports/index.html
+++ b/fr/programmes/professionnels-des-transports/index.html
@@ -158,7 +158,7 @@ theForm.elements[i].checked = status;
 <ul>
 <li>transpose les deux premières sections dans un contexte, en illustrant l'importance de la planification et de divers outils pour la réussite des programmes ;</li>
 <li>contient plus de 30 études de cas sur les transports, qui incluent l'évaluation des retombées ;</li>
-<li>peut faire l'objet d'une <a href="../../../fr/guide-de-planification/recherche-avance/">recherche</a> par sujet, endroit, mot clé et autres éléments.</li>
+<li>peut faire l'objet d'une <a href="../../../fr/recherche/">recherche</a> par sujet, endroit, mot clé et autres éléments.</li>
 </ul>
 <h4>Les pages Ressources sur le transport durable et Ressources sur la sécurité routière :</h4>
 <ul>
