--- a/en/programs/transportation-professionals/index.html
+++ b/en/programs/transportation-professionals/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -161,13 +161,13 @@ theForm.elements[i].checked = status;
 <ul>
 <li>brings the first two sections to life, with success stories illustrating how the planning approach and the use of multiple tools led to success,</li>
 <li>has 30 + transportation case studies with measured impacts, and</li>
-<li>can be <a href="../../../en/case-studies/case-studies-search/">searched</a> by topic area, location, key words, and other factors.</li>
+<li>can be <a href="../../../en/search/">searched</a> by topic area, location, key words, and other factors.</li>
 </ul>
 <h4>The Sustainable Transportation Resources page, and the Road Safety Resources page:</h4>
 <ul>
 <li>provide brief descriptions of related transportation case studies on this site,</li>
 <li>feature annnotated links to additional on-line resources for transportation professionals, and</li>
-<li>can be <a href="../../../en/topic-resources/topic-resources-search/">searched</a> by location, key words, and other factors.</li>
+<li>can be <a href="../../../en/search/">searched</a> by location, key words, and other factors.</li>
 </ul>
 </div>
 </div><!--/left_main-->
