--- a/en/home/index.html
+++ b/en/home/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -160,7 +160,33 @@ New to Community-Based Social Marketing? <a href="../../en/programs/community-ba
 <div class="latest_webinar_wrap">
 
 <!--/latest_news_area-->
-<div class="webinar_area_wrap" style="margin: 0;">
+
+<div class="latest_news_area">
+<h2>Latest News</h2>
+
+<!-- EDIT NEWS HERE!
+
+Copy and paste this and add new news item:
+
+<h6>This is where the date goes</h6>
+<p><a href="../../en/news/">This is where the title goes</a></p>
+
+You'll want to only have two items at a time or else the box will overflow a bit.
+Don't forget to update the french page as well, and to add your news to
+the full /en/news/ page.
+
+-->
+
+<h6>February 08, 2025</h6>
+<p><a href="../../en/news/">Suggest a Program for Landmark Designation</a></p>
+
+<h6>February 07, 2025</h6>
+<p><a href="../../en/news/">10 New Case Studies, 93 New Topic Resources Posted in 2024</a></p>
+
+<h6><a href="../../en/news/"><strong>More News...</strong></a></h6>
+</div>
+
+<div class="webinar_area_wrap">
 <div class="webinar_area_top"> </div>
 <div class="webinar_area">
 <h2>International Social Marketing Association (iSMA)</h2>
