--- a/fr/accueil/index.html
+++ b/fr/accueil/index.html
@@ -155,8 +155,33 @@ theForm.elements[i].checked = status;
 <!--/topic_wrap-->
 <div class="latest_webinar_wrap">
 
+<div class="latest_news_area">
+<h2>Dernières nouvelles</h2>
+
+<!-- EDIT NEWS HERE!
+
+Copy and paste this and add new news item:
+
+<h6>This is where the date goes</h6>
+<p><a href="../../fr/nouvelles/">This is where the title goes</a></p>
+
+You'll want to only have two items at a time or else the box will overflow a bit.
+Don't forget to update the english page as well, and to add your news to
+the full /fr/nouvelles/ page.
+
+-->
+
+<h6>08-02-2025</h6>
+<p><a href="../../fr/nouvelles/">Suggérer un programme de désignation Landmark</a></p>
+
+<h6>07-02-2025</h6>
+<p><a href="../../fr/nouvelles/">10 nouvelles études de cas, 93 nouvelles ressources thématiques ont été ajoutées en 2024</a></p>
+
+<h6><a href="../../fr/nouvelles/"><strong>Autres nouvelles...</strong></a></h6>
+</div>
 <!--/latest_news_area-->
-<div class="webinar_area_wrap" style="margin: 0;">
+
+<div class="webinar_area_wrap">
 <div class="webinar_area_top"> </div>
 <div class="webinar_area">
 <h2>Association internationale du marketing social</h2>
